added: notifications, update categories state with useEffect
added react toastify, fixed the useEffect update for categories

--- a/src/components/categories-page/categories-table.css
+++ b/src/components/categories-page/categories-table.css
@@ -70,3 +70,23 @@
     font-weight: bold;
     border-block: groove;
  }
+
+ button {
+   background-color: transparent;
+   border: solid;
+   border-width: 2px;
+   border-color: var(--black);
+   cursor: pointer;
+   padding: 8px;
+   border-radius: 5px;
+   font-size: 16px;
+   color: var(--black);
+}
+
+button:hover {
+   background-color: var(--white_hover);
+}
+
+button:active {
+   background-color: var(--white_active);
+}
