added: dbl click to show task info

--- a/src/main.css
+++ b/src/main.css
@@ -398,7 +398,8 @@ aside {
    left: 50%;
    transform: translate(-50%, -50%);
    border-radius: 8px;
-   visibility: hidden;
+   /*visibility: hidden; */
+   z-index: 1000;
 }
 
 #modal_cancel {
