--- a/src/components/task/task.css
+++ b/src/components/task/task.css
@@ -79,8 +79,89 @@
     width: 26px;
     height: 26px;
     padding: 4px;
-    visibility: hidden;
+    visibility: v;
     position: relative;
     top: 20%;
     transform: translate(0%, -56%);
  }
+
+ #overlay-modal-tasks {
+   position: fixed; 
+   top: 0;
+   left: 0;
+   width: 100vw;
+   height: 100vh; 
+   background-color: rgba(0, 0, 0, 0.5); 
+   visibility: visible; 
+   z-index: 99;
+   
+}
+
+#modal_dblClick {
+   position: fixed;
+   height: 535px;
+   width: 500px;
+   background-color: var(--white);
+   z-index: 3;
+   top: 45%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   border-radius: 8px;
+   visibility: visible;
+   z-index: 1000;
+}
+
+.modal.visible {
+   visibility: visible;
+   z-index: 1000;
+}
+
+#modal_cancel {
+   margin: 5px 12px 0px 470px;
+}
+
+#modal_title,
+#modal_category {
+   height: 22px;
+   margin: 0px 30px 10px 30px;
+   padding: 5px 5px 5px 7px;
+   color: var(--black);
+   max-height: 30px;
+   max-width: 450px;
+   overflow-x: auto;
+   overflow-y: hidden;
+   background-color: var(--white_active);
+   border-radius: 5px;
+}
+
+#modal_description {
+   height: 210px;
+   margin: 0px 30px 10px 30px;
+   padding: 3px 0px 0px 7px;
+   overflow-y: auto;
+   color: var(--black);
+   overflow-wrap: break-word;
+   max-width: 450px;
+   background-color: var(--white_active);
+   border-radius: 5px;
+}
+
+.span_date {
+   width: 50px;
+}
+
+.span_author {
+   width: 100px;
+}
+#modal_dates {
+   margin-top: 20px;
+   margin-left: 15px;
+}
+
+#endDate_label {
+   margin-left: 70px;
+}
+#modal_settings {
+   width: 390px;
+   height: 280px;
+}
