added: soft delete task

--- a/src/components/task/task.css
+++ b/src/components/task/task.css
@@ -51,11 +51,16 @@
     height: 20px;
  }
  
- .text-overflow-task {
+ .text-overflow-task,
+ .text-overflow-task_category {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
   }
+
+.text-overflow-task_category {
+   text-align: right;
+}
  
  .task_day {
     font-size: 14px;
@@ -176,4 +181,55 @@
    position: fixed;
    left: 40%;
    z-index: 1000;
+}
+
+#task_creationTitle {
+   color: var(--black);
+   margin-bottom: 6px;
+   margin-left: 10px;
+}
+
+.descriptioLabelTask {
+   font-size: 10px;
+   margin-bottom: -5px;
+   font-weight: bold;
+   margin-left: 10px;
+}
+
+#category_element {
+   width: 95%;
+   margin-left: 10px;
+   margin-bottom: 0px;
+}
+
+#description-task {
+   padding: 8px;
+   margin-bottom: 12px;
+   box-sizing: border-box;
+   background-color: var(--white_active);
+   border-radius: 5px;
+   outline: none;
+   border: none;
+   box-shadow: 0px 0px 2px 0px black;
+   width: 95%;
+   margin-left: 10px;
+   margin-bottom: 0px;
+   border-radius: 5px;
+   height: 200px;
+}
+
+#date_section {
+   display: flex;
+   flex-direction: row;
+   margin-left: 12px;
+}
+
+#date_section p {
+   color: var(--black);
+   margin-top: 5px;
+}
+
+#date_section input {
+   width: 145px;
+   margin-top: 5px;
 }
