--- a/src/components/main-page/main-page.css
+++ b/src/components/main-page/main-page.css
@@ -72,3 +72,50 @@
 #scrum_section {
    display: flex;
 }
+
+/* Painel de pesquisa*/
+.search-icon,
+.reset-filter-icon {
+   margin-left: auto;
+   font-size: 30px;
+   margin-top: -20px;
+   cursor: pointer;
+   color: white;
+   
+}
+
+.reset-filter-icon {
+   margin-left: 10px;
+}
+
+.filter {
+   position: absolute; 
+   top: 43px; 
+   left: 1000px;
+   width: 500px;
+   display: inline;
+   display: flex;
+   align-items: center;
+
+
+}
+#category, #users{
+   flex:1;
+   margin-right: 10px;
+   width: 150px;
+
+   
+
+}
+.searchFields {
+   display: flex;
+   align-items: center;
+   justify-content: space-between; 
+   
+}
+
+.search-icon:hover, 
+.reset-filter-icon:hover {
+   transform: scale(1.5); 
+   color: var(--white_active); 
+}
